maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:2: error: not found: value random3
                    while (!isOverBaggle()) {x=random3(); {x match 
                                               ^