maze.wallfollower.WallFollowerMaze.scala.code
override def run() {var x:Int=0;
                    while (!isOverBaggle()) {x=random3(); {x match 
{case 0=>if (!isFacingWall) {forward()}
 case 1=>right(); if (!isFacingWall) {forward()}
 case 2=>left(); if (!isFacingWall) {forward()}}}};
pickupBaggle()
    // Your code here 
}